# storyteller-task

./: .env.example  .gitignore  example.json  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/ai/: client.py  llm.py  ocr.py  pipeline.py  safety.py  video.py  vision.py
app/api/: routes.py
app/core/: __init__.py  config.py  decision_engine.py  normalizer.py  scorer.py  validator.py
app/models/: __init__.py  internal.py  schemas.py
app/rules/: __init__.py  rule_engine.py
test_cases/: image_approve.json  image_approve_fashion.json  image_reject.json  image_reject_wrong_cta.json  image_reject_wrong_image_content.json  video_approve.json  video_reject_title_media_mismatch.json
tests/: test_config.py  test_validation_api.py
