[project]
name = "storyteller-content-gateway"
version = "0.1.0"
description = "FastAPI content quality and moderation gateway for media-heavy stories."
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic-settings",
  "httpx",
  "openai",
  "opencv-python-headless",
  "numpy",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "respx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
